Criado menu de contexto para a view de turmas, ao pressionar um registro na listView será fornecido um menu com opções: Novo Registro, Editar, Remover.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,9 +93,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:drawableTop="@drawable/configuracao"
-            android:onClick="configuracaoOnClick"
-            android:text="Configurações"
+            android:drawableTop="@drawable/sync"
+            android:onClick="syncOnClick"
+            android:text="Sincronizar"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
             android:layout_alignTop="@+id/turma"
