Alterado layout da Activity Turma.

--- a/app/src/main/res/layout/activity_turma.xml
+++ b/app/src/main/res/layout/activity_turma.xml
@@ -3,14 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
-        <!--android:text="@string/turma_text"
-        android:textAppearance="?android:attr/textAppearanceLarge" />-->
+        android:layout_height="10px"
+        android:layout_gravity="center"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <LinearLayout
         android:layout_width="match_parent"
